<!--
  ~ Copyright 2015-2016 Cody Goldberg
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Too Many Sensors</string>

    <string name="nav_observe">Observe</string>
    <string name="nav_recall">Recall</string>
    <string name="nav_settings">Settings</string>

    <string name="sampling_rate">Sampling Rate</string>
    <string name="sampling_rate_summary">Will attempt to sample at $1%d Hz\nThere are no guarantees on a per-sensor basis for meeting this sampling rate.</string>
    <string-array name="sampling_rate_entries">
        <item>Hz</item>
        <item>nanoseconds</item>
        <item>microseconds</item>
        <item>milliseconds</item>
        <item>seconds</item>
    </string-array>
    <string name="maximum_report_rate">Maximum Reporting Rate</string>
    <string name="maximum_report_rate_summary">Will hold samples until a period of %1$d ??? has passed</string>
    <string name="logging">Data Logging</string>
    <string name="logging_summary_on">Saving sensor data to the device</string>
    <string name="logging_summary_off">Enable to save sensor data on the device</string>
    <string name="debug_category">Debug</string>
    <string name="export_realm">Export Realm</string>
    <string name="export_realm_summary">Exports the Realm database to a share intent.</string>
    <string name="reset_realm">Reset Realm</string>
    <string name="reset_realm_summary">Clears all data in the Realm database.</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_export">Export</string>
    <string name="edit_name">Event Name</string>
    <string name="edit_positive">Save</string>
    <string name="edit_neutral">Cancel</string>
    <string name="edit_title">Edit Entry</string>
    <string name="hint_category_name">Category Name</string>
    <string name="category_positive">Save</string>
    <string name="category_neutral">Cancel</string>
    <string name="category_title">Edit Category</string>
    <string name="export_csv">Export CSV</string>
    <string name="export_csv_summary">Exports data as an Excel readable CSV.</string>
    <string name="data_too_large">This is a large log event, and therefore this data might cause crashes.</string>
    <string name="i_understand">I Understand</string>
    <string name="show_live_graph">Show live graph</string>
    <string name="show_live_graph_summary">Shows a live graph of data collection</string>
    <string name="nav_schedule">Schedule</string>
    <string name="no_schedules_found">No schedules have been created.</string>
    <string name="hint_schedule_name">Schedule Name</string>
    <string name="hint_schedule_periodicity">Delay (minutes)</string>
    <string name="hint_schedule_length">Length (seconds)</string>
    <string name="hint_schedule_randomize">Randomize (percent)</string>
</resources>
