<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <io.github.prefanatic.toomanysensors.ui.view.NumberPickerPreference
        android:key="pref_sampling_rate"
        android:title="@string/sampling_rate"
        android:summary="@string/sampling_rate_summary"
        android:defaultValue="200000"/>

    <io.github.prefanatic.toomanysensors.ui.view.NumberPickerPreference
        android:key="pref_maximum_report_rate"
        android:title="@string/maximum_report_rate"
        android:summary="@string/maximum_report_rate_summary"/>

    <CheckBoxPreference
        android:key="pref_logging"
        android:title="@string/logging"
        android:summaryOn="@string/logging_summary_on"
        android:summaryOff="@string/logging_summary_off"/>

    <PreferenceCategory
        android:title="@string/debug_category">

        <Preference
            android:title="@string/export_realm"
            android:summary="@string/export_realm_summary"
            android:key="pref_export_realm"/>

        <Preference
            android:title="@string/reset_realm"
            android:summary="@string/reset_realm_summary"
            android:key="pref_reset_realm"/>

    </PreferenceCategory>

</PreferenceScreen>